--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack --mode=development",
     "build": "webpack --mode=production",
-    "build-prod": "webpack --config=webpack.config.prod.js",
+    "build-prod": "webpack --mode=production --config=webpack.config.prod.js",
     "dev-server": "webpack-dev-server"
   },
   "repository": {
@@ -28,6 +28,7 @@
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.2.1",
+    "file-loader": "^6.0.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^9.0.3",
     "style-loader": "^1.2.1",
