--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "url": "https://github.com/JfrAziz/jafaraziz.com/issues"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
